# onchain-exchange-homework

./: LICENSE
accounts-tree-bench/: README.md  counters_bench.go  go.mod  go.sum  main.go  main_optimized.go
kzg-test/: go.mod  go.sum  main.go
mt-manager/: Makefile  README.md  go.mod  go.sum  main.go  perf_analyze.md
protobuf-deserialize/: Makefile  benchmark_test.go  go.mod  order.pb.go  order.proto  order_vtproto.pb.go
signatureVerifyBench/ed25519/rust/ed25519_bench/: Cargo.toml  info.txt
signatureVerifyBench/ed25519/rust/ed25519_bench/src/: main.rs
smt-v2/: README_MODIFIED.md  example_test.go  go.mod  go.sum  trie.go  trie_cache.go  trie_revert.go  trie_tools.go
smt-v3/: README.txt  arity_benchmark_test.go  go.mod  go.sum  smt.go  smt_test.go  store_pebble.go
tx-header/: README.md  blake3gen.go  block_compress.go  dictionary.zstd  dictionary_v2.zstd  dictionary_v3.zstd  dictionary_v4.zstd  dictionary_v5.zstd  dictionary_v6.zstd  dictionary_v7.zstd  dictionary_v8.zstd  go.mod  go.sum  grpc_client.go  hash-test.go  main.go  main_v2.go  mm-bybit-mirror.go  mm-v2-bybit-mirror.go  sha_test.go  sharded_cache.go  tx.proto
uuidv7-test/: README.md  go.mod  go.sum  uuid7bench_test.go
v2-tx-pipeline/: go.mod  go.sum  main.go  sharded_cache.go  tmp.gg.tmp  tx.proto
v2-verkle-tree-test/: README.txt  blake3_batch_test.go  capacity_analysis.go  capacity_analysis_test.go  collision_analysis_test.go  example_usage.go  final_spec.md  go.mod  go.sum  hash_benchmark_test.go  helpers.go  kzg_crypto.go  memory_pools.go  memory_pools_test.go  multiproof_types_test.go  (+11 more)
(+136 files in other folders)
