[package]
name = "ed25519_bench"
version = "0.1.0"
edition = "2024"

num_cpus = "1.0"

[dependencies]
# Самая быстрая библиотека в экосистеме Rust
ed25519-dalek = { version = "2.1", features = ["batch", "rand_core", "fast"] }
rand = "0.8"
rayon = "1.8" # Для мультипоточности

# Библиотека для подсчета ядер процессора (то, что ты спрашивал)
num_cpus = "1.0"



[profile.release]
lto = "fat"          # Максимальная оптимизация на этапе линковки (долго компилируется, быстро работает)
codegen-units = 1    # Генерировать код одним куском (лучше для оптимизации, но медленнее сборка)
panic = "abort"      # При панике просто крашить программу (убирает код раскрутки стека)
opt-level = 3        # Максимальный уровень оптимизации (по умолчанию и так 3, но пусть будет явно)